# pcprec

./: .gitignore  0.out  200hard.txt  21.  26.out  29.out  32.out  40.out  43.out  45.out  7.out  Cargo.toml  a.csv  a.out  aaa.out  experiment.sh  graph.dot  i  ic3pcp.sqlite  jobs  jobs.sh  jobs1  jobs2  jobs3  lower.dot  nfa.dot  o.txt  rejobs.sh  results.sqlite  results2.sqlite  single_e.sh
inv/: 0-false.txt  0-true.txt  1-false.txt  1-true.txt  2-false.txt  2-true.txt  3-false.txt  3-true.txt  4-false.txt  4-true.txt  5-false.txt  5-true.txt  6-false.txt  6-true.txt  7-false.txt  7-true.txt  9-false.txt
proofs/: 10-false.txt  10.txt  11-false.txt  11.txt  13-false.txt  13.txt  14-false.txt  14-true.txt  16-false.txt  16.txt  18-true.txt  18.txt  19-false.txt  19.txt  20-false.txt  20.txt  25-false.txt  25.txt  26-false.txt  26-true.txt  27-false.txt  27.txt  30-false.txt  30.txt  31-false.txt  33-true.txt  41-true.txt  42-false.txt  42.txt  43-false.txt  46-true.txt  46.txt  47-false.txt  48-true.txt  5-true.txt  5.txt  7-false.txt  8-false.txt  8.txt
reduced/: lower.dot  upper.dot
results/: 0-rev.txt  0.txt  1-rev.txt  1.txt  10-rev.txt  10.txt  11-rev.txt  11.txt  12-rev.txt  12.txt  13-rev.txt  13.txt  14.txt  15.txt  16-rev.txt  16.txt  17-rev.txt  17.txt  18-rev.txt  18.txt  19-rev.txt  19.txt  2-rev.txt  20-rev.txt  20.txt  21-false.txt  21-rev.txt  21-true.txt  22-rev.txt  22.txt  23.txt  24-false.txt  24-rev.txt  24.txt  25-rev.txt  25.txt  26-rev.txt  27-rev.txt  27.txt  28.txt  (+54 more)
src/: automaton.rs  conf_automaton.rs  lib.rs  main.rs  pcp.rs  pcpseq.rs  (+5 more)
(+2 files in other folders)
