[package]
name = "pcp-rec-str"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
rand="0.8.4"
itertools="0.10.1"
graphviz-rust = "0.7.0"
log = "0.4.0"
ulid = "1.1.2"
nom = "7.1.3"
kgst = "0.1.1"
wasm-bindgen = "0.2.91"
cargo-instruments = "0.4.9"

[lib]
crate-type = ["cdylib", "rlib"]
